# maximus

./: .gitignore  Makefile  README.md  TODO  configure  makefile.mk  meson.build  vars_gcc.mk
btree/: Makefile  audit.c  bbuf.cc  bbuf.h  blkio.cc  blkio.h  blkiobuf.cc  blkiobuf.h  bt_ins.cc  bt_look.cc  bt_lookr.cc  bt_open.cc  bt_rem.cc  btnode.cc  btnode.h  btree.cc  btree.h  btreec.cc  btreec.h  btreep.h  bttest.cc  btype.h  cppmain.cc  dbase.cc  dbase.h  dbasec.cc  dbasec.h  dllc.c  meson.build  palist.cc  palist.h  track.cc  track.h  trackc.cc  trackc.h  trackcom.h  trackexp.cc  trackimp.cc
builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
builddir/btree/c557f1d@@maxbt@sha/: libmaxbt.so.symbols
builddir/btree/c557f1d@@maxdb@sha/: libmaxdb.so.symbols
builddir/comdll/999c3df@@comm@sha/: libcomm.so.symbols
builddir/lang/: english.ltf  english.lth  english.mh  maid
builddir/max/: max
builddir/meson-logs/: install-log.txt  meson-log.txt
builddir/mex/: mex  mex_tab.c  mex_tab.h
builddir/mex/6397371@@mexvm@sha/: libmexvm.so.symbols
builddir/msgapi/7d3f9fb@@msgapi@sha/: libmsgapi.so.symbols
builddir/prot/4689753@@xfer@sha/: libxfer.so.symbols
builddir/scripts/: maxbbs
builddir/slib/a57b4ea@@max@sha/: libmax.so.symbols
builddir/slib/a57b4ea@@smserial@sha/: libsmserial.so.symbols
builddir/sqafix/: sqafix
builddir/squish/: sqconv  sqfix  sqinfo  sqpack  sqreidx  sqset  squish  sstat
builddir/unix/b2c348e@@compat@sha/: libcompat.so.symbols
builddir/util/: accem  ansi2bbs  ansi2mec  cvtusr  editcall  fb  fixlr  maxcomm  mecca  mecca_vb.h  mr  scanbld  setlr  silt
comdll/: common.c  comstruct.h  fdcomm.c  ipcomm.c  meson.build  modemcom.c  ntcomm.c  ntcommdl.c  ntlisten.c  pdclient.c  telnet.h  wincomm.c
docs/: meson.build
install_tree/: meson.build
install_tree/etc/: areas.bbs  compress.cfg  filearea.ctl  language.ctl  max.ctl  menus.ctl  msgarea.ctl  reader.ctl  route.cfg  squish.cfg
install_tree/etc/help/: 1stedit.mec  change.mec  contents.mec  echo.mec  editor.mec  filehelp.mec  fsed.mec  goodbye.inc  locate.mec  mail.mec  main.mec  mb_help.mec  message.inc  msg.mec  olr.mec  rep_edit.mec  stats.inc
install_tree/etc/lang/: english.mad  english.mh  rdlang.c  user.lh
install_tree/etc/m/: arealist.vm  callers.mex  callers.vm  card.mex  card.vm  chgdob.vm  chgsex.vm  class.mex  class.vm  dir.vm  dorinfo.mex  dorinfo.vm  filearea.vm  forcepwd.vm  headchat.vm  headchg.vm  headfile.vm  headmsg.vm  input.mh  intpad.mh  lastrd.vm  logo.mex  logo.vm  max.mh  max_menu.mh  mexbank.lh  mexbank.mex  mexbank.vm  mexchat.lh  msgarea.vm  prm.mh  pstat.vm  rand.mh  stats.mex  stats.vm  taglist.vm  timewarn.vm  userlist.vm
install_tree/m/: arealist.mex  chgdob.mex  chgsex.mex  dir.mex  dorinfo.mex  filearea.mex  forcepwd.mex  headchat.mex  headchg.mex  headfile.mex  headmsg.mex  input.mh  intpad.mh  language.mh  lastrd.mex  longpad.mh  max.mh  max_menu.mh  mexchat.mex  pstat.mex  rand.mh  stats.mex  swap.mh  taglist.mex  timewarn.mex  userlist.mex
install_tree/man/: upgrade.txt  whatsnew.300
lang/: english.mad  meson.build  user.lh
m/: areachg.mh  arealist.mex  callers.mex  class.mex  dir.mex  forcepwd.mex  headchat.mex  headchg.mex  headfile.mex  headmsg.mex  language.mh  logo.mex  longpad.mh  mexbank.mex  mexchat.lh  mexchat.mex  msgarea.mex  prm.mh  regress.mex  rip.mh  swap.mh  timewarn.mex  userlist.mex
max/: Makefile  api_brow.c  areadat.h  async.c  asyncnt.c  atexit.c  cppmain.cc  date.c  debug.c  disp_dat.c  disp_max.c  disp_mis.c  disp_qu.c  display.c  dos.c  emsi.c  events.c  f_area.c  f_con.c  f_down.c  f_hurl.c  f_idx.c  f_intrin.c  f_isval.c  f_kill.c  f_locate.c  f_logup.c  f_misc.c  f_over.c  f_queue.c  f_raw.c  f_tag.c  f_titles.c  f_type.c  f_up.c  f_xfer.c  fos.c  fos_dos.c  fos_os2.c  joho.c  (+130 more)
mcp/: maxend.c  maxshow.c  maxstart.c  mcp.c  mcp_cli.c  mcp_dll.c  mcp_log.c  mcp_max.c
mex/: Makefile  meson.build  mex_err.c  mex_lex.c  mex_lex.h  mex_main.c  mex_misc.c  mex_prot.h  mex_symt.c  mex_tab.c  mex_tab.y  sem_decl.c  sem_expr.c  sem_flow.c  sem_func.c  sem_gen.c  sem_goto.c  sem_scop.c  sem_vm.c  vm.h  vm_dll.c  vm_heap.c  vm_opcvt.c  vm_opflo.c  vm_opfun.c  vm_opmth.c  vm_opstk.c  vm_opstr.c  vm_read.c  vm_run.c  vm_symt.c
msgapi/: Makefile  api_sdm.c  api_sdm.h  api_sdmp.h  api_sq.h  apidebug.h  bld.c  makefile.mk  meson.build  msgapi.c  msgapi.h  msgapi16.lnk  msgapi32.lnk  msgapint.lnk  shell.c  sq_area.c  sq_help.c  sq_idx.c  sq_kill.c  sq_lock.c  sq_misc.c  sq_msg.c  sq_read.c  sq_uid.c  sq_write.c  sqasm.asm
prot/: Makefile  frecv.c  fsend.c  meson.build  pdata.c  rbsb.c  rz.c  sz.c  zm.c
rexx/: expimp.c  maxuapi.c  misc.c  rexx.c
sample/: binkd.conf
scripts/: maxbbs  maxbbs.in  meson.build  runbbs.sh
slib/: 1stchar.c  Makefile  align.c  arc_cmd.c  brktrap.c  compiler_align.h  compiler_details.h  compiler_unix.h  crep.c  crit.c  dmalloc.c  dsmalloc.c  fexist.c  getword.c  gwordq.c  makedir.c  memstr.c  meson.build  ncheck.c  ntcomm.h  prog.h  progprot.h  savedir.c  skiplist.c  strcmpm.c  strstrl.c  strstrm.c  uniqren.c  unix_misc.c  userapi.c  win.c
sqafix/: crc32.c  meson.build  pathdef.h  sqacfg.c  sqaexe.c  sqafix.h  sqauti.c  unixmisc.c
squish/: Makefile  killrcat.c  meson.build  mkprod.awk  msgtrack.c  s_abbs.c  s_busy.c  s_config.c  s_dupe.c  s_hole.c  s_link.c  s_log.c  s_match.c  s_misc.c  s_pack.c  s_scan.c  s_sflo.c  s_squash.c  s_stat.c  s_thunk.c  s_toss.c  sqconv.c  sqfeat.h  sqfix.c  sqinfo.c  sqpack.c  sqreidx.c  sqset.c  squish.c  squishp.h  sstat.c
unix/: adcase.c  dosio.c  dossem.c  meson.build  process.c  wincomm.c  xpunix.c
unix/include/: conio.h  io.h  winstr.h
util/: accem.c  ansi2bbs.c  copymsg.c  cvt_misc.c  cvtusr.c  editcall.c  fb.c  fixlr.c  init.c  maid.c  maxcomm.c  maxpipe.c  mecca.c  meson.build  mr.c  oracle.c  piper.c  s_access.c  s_area.c  s_colour.c  s_equip.c  s_farea.c  s_heap.c  s_lang.c  s_marea.c  s_matrix.c  s_menu.c  s_misc.c  s_parse.c  s_proto.c  s_reader.c  s_sessio.c  s_system.c  scanbld.c  setlr.c  silt.c  siltprot.h
(+136 files in other folders)
